update: 优化首次查询